@@ -8,18 +8,23 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
+import uk.gov.hmcts.ccd.ApplicationParams;
+import uk.gov.hmcts.ccd.data.user.UserRepository;
 import uk.gov.hmcts.ccd.domain.model.definition.CaseDetails;
 import uk.gov.hmcts.ccd.domain.model.search.CaseSearchResult;
 import uk.gov.hmcts.ccd.domain.model.search.elasticsearch.ElasticsearchRequest;
 import uk.gov.hmcts.ccd.domain.service.search.elasticsearch.CaseSearchOperation;
 import uk.gov.hmcts.ccd.domain.service.search.elasticsearch.CrossCaseTypeSearchRequest;
+import uk.gov.hmcts.ccd.domain.service.search.elasticsearch.CrossCaseTypeSearchRequestHelper;
 import uk.gov.hmcts.ccd.domain.service.search.elasticsearch.ElasticsearchQueryHelper;
+import uk.gov.hmcts.ccd.domain.service.search.elasticsearch.SearchIndex;
 import uk.gov.hmcts.ccd.endpoint.exceptions.BadRequestException;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 import static java.util.Collections.singletonList;
@@ -28,6 +33,7 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.anyBoolean;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.any;
 import static org.mockito.Mockito.argThat;
 import static org.mockito.Mockito.mock;
@@ -35,10 +41,13 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.ccd.auditlog.aop.AuditContext.MAX_CASE_IDS_LIST;
 
+@ExtendWith(MockitoExtension.class)
 class CaseSearchEndpointTest {
 
     private static final String CASE_TYPE_ID = "GrantOnly";
     private static final String CASE_TYPE_ID_2 = "CASE_TYPE_2";
+    private static final String GLOBAL_INDEX = "global_index";
+    private static final String INDEX_TYPE_DOC = "_doc";
 
     @Mock
     private CaseSearchOperation caseSearchOperation;
@@ -46,18 +55,33 @@ class CaseSearchEndpointTest {
     @Mock
     private ElasticsearchQueryHelper elasticsearchQueryHelper;
 
-    @InjectMocks
+    @Mock
+    private ApplicationParams applicationParams;
+
+    @Mock
+    private UserRepository userRepository;
+
     private CaseSearchEndpoint endpoint;
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
+        CrossCaseTypeSearchRequestHelper crossCaseTypeSearchRequestHelper
+            = new CrossCaseTypeSearchRequestHelper(applicationParams);
+        endpoint = new CaseSearchEndpoint(caseSearchOperation, userRepository,
+             elasticsearchQueryHelper, crossCaseTypeSearchRequestHelper);
     }
 
     @Test
     void shouldThrowBadRequestExceptionWhenCaseTypeListIsNull() {
         assertThrows(BadRequestException.class, () ->
-            endpoint.searchCases(null, null, true)
+            endpoint.searchCases(null, null, true, false)
+        );
+    }
+
+    @Test
+    void shouldThrowBadRequestExceptionWhenCaseTypeListIsNullAndGlobalTrue() {
+        assertThrows(BadRequestException.class, () ->
+            endpoint.searchCases(null, null, true, true)
         );
     }
 
@@ -65,7 +89,15 @@ class CaseSearchEndpointTest {
     void shouldThrowBadRequestExceptionWhenCaseTypeListIsEmpty() {
         List<String> emptyList = List.of();
         assertThrows(BadRequestException.class, () ->
-            endpoint.searchCases(emptyList, null, true)
+            endpoint.searchCases(emptyList, null, true, false)
+        );
+    }
+
+    @Test
+    void shouldThrowBadRequestExceptionWhenCaseTypeListIsEmptyAndGlobalTrue() {
+        List<String> emptyList = List.of();
+        assertThrows(BadRequestException.class, () ->
+            endpoint.searchCases(emptyList, null, true, true)
         );
     }
 
@@ -82,18 +114,53 @@ class CaseSearchEndpointTest {
         List<String> caseTypeIds = singletonList(CASE_TYPE_ID);
 
         // ACT
-        final CaseSearchResult caseSearchResult = endpoint.searchCases(caseTypeIds, searchRequest, true);
+        final CaseSearchResult caseSearchResult = endpoint.searchCases(caseTypeIds, searchRequest, true, false);
 
         // ASSERT
         verify(elasticsearchQueryHelper).validateAndConvertRequest(searchRequest);
         verify(caseSearchOperation).execute(argThat(crossCaseTypeSearchRequest -> {
             assertThat(crossCaseTypeSearchRequest.getSearchRequestJsonNode(), is(searchRequestNode));
+            assertThat(crossCaseTypeSearchRequest.getSearchIndex(), is(Optional.empty()));
             assertThat(crossCaseTypeSearchRequest.getCaseTypeIds().size(), is(1));
-            assertThat(crossCaseTypeSearchRequest.getCaseTypeIds().get(0), is(CASE_TYPE_ID));
+            assertThat(crossCaseTypeSearchRequest.getCaseTypeIds().getFirst(), is(CASE_TYPE_ID));
             assertThat(crossCaseTypeSearchRequest.isMultiCaseTypeSearch(), is(false));
             assertThat(crossCaseTypeSearchRequest.getAliasFields().size(), is(0));
             return true;
-        }), anyBoolean());
+        }), eq(true));
+        assertThat(caseSearchResult, is(result));
+    }
+
+    @Test
+    void searchCaseDetailsGlobalInvokesOperation() throws JsonProcessingException {
+
+        // ARRANGE
+        when(applicationParams.getGlobalSearchIndexName()).thenReturn(GLOBAL_INDEX);
+        when(applicationParams.getGlobalSearchIndexType()).thenReturn(INDEX_TYPE_DOC);
+        CaseSearchResult result = mock(CaseSearchResult.class);
+        when(caseSearchOperation.execute(any(CrossCaseTypeSearchRequest.class), anyBoolean())).thenReturn(result);
+        String searchRequest = "{\"query\": {\"match\": \"blah blah\"}}";
+        JsonNode searchRequestNode = new ObjectMapper().readTree(searchRequest);
+        ElasticsearchRequest elasticSearchRequest = new ElasticsearchRequest(searchRequestNode);
+        when(elasticsearchQueryHelper.validateAndConvertRequest(any())).thenReturn(elasticSearchRequest);
+        List<String> caseTypeIds = singletonList(CASE_TYPE_ID);
+
+        // ACT
+        final CaseSearchResult caseSearchResult = endpoint.searchCases(caseTypeIds, searchRequest, true, true);
+
+        // ASSERT
+        verify(elasticsearchQueryHelper).validateAndConvertRequest(searchRequest);
+        verify(caseSearchOperation).execute(argThat(crossCaseTypeSearchRequest -> {
+            assertThat(crossCaseTypeSearchRequest.getSearchRequestJsonNode(), is(searchRequestNode));
+            assertThat(crossCaseTypeSearchRequest.getSearchIndex().isPresent(), is(true));
+            SearchIndex idx = crossCaseTypeSearchRequest.getSearchIndex().get();
+            assertThat(idx.getIndexName(), is(GLOBAL_INDEX));
+            assertThat(idx.getIndexType(), is(INDEX_TYPE_DOC));
+            assertThat(crossCaseTypeSearchRequest.getCaseTypeIds().size(), is(1));
+            assertThat(crossCaseTypeSearchRequest.getCaseTypeIds().getFirst(), is(CASE_TYPE_ID));
+            assertThat(crossCaseTypeSearchRequest.isMultiCaseTypeSearch(), is(false));
+            assertThat(crossCaseTypeSearchRequest.getAliasFields().size(), is(0));
+            return true;
+        }), eq(true));
         assertThat(caseSearchResult, is(result));
     }
 
@@ -111,20 +178,62 @@ class CaseSearchEndpointTest {
         when(elasticsearchQueryHelper.getCaseTypesAvailableToUser()).thenReturn(List.of(CASE_TYPE_ID, CASE_TYPE_ID_2));
 
         // ACT
-        final CaseSearchResult caseSearchResult = endpoint.searchCases(caseTypeIds, searchRequest, true);
+        final CaseSearchResult caseSearchResult = endpoint.searchCases(caseTypeIds, searchRequest, true,
+            false);
 
         // ASSERT
         verify(elasticsearchQueryHelper).validateAndConvertRequest(searchRequest);
         verify(caseSearchOperation).execute(argThat(crossCaseTypeSearchRequest -> {
             assertThat(crossCaseTypeSearchRequest.getSearchRequestJsonNode(), is(searchRequestNode));
+            assertThat(crossCaseTypeSearchRequest.getSearchIndex(), is(Optional.empty()));
             assertThat(crossCaseTypeSearchRequest.getCaseTypeIds().size(), is(2));
             assertThat(crossCaseTypeSearchRequest.getCaseTypeIds(), is(List.of(CASE_TYPE_ID, CASE_TYPE_ID_2)));
             assertThat(crossCaseTypeSearchRequest.isMultiCaseTypeSearch(), is(true));
             assertThat(crossCaseTypeSearchRequest.getAliasFields().size(), is(0));
             return true;
-        }), anyBoolean());
+        }), eq(true));
         assertThat(caseSearchResult, is(result));
     }
+
+    @Test
+    void searchCases_globalTrueAndWildcardExpandsCaseTypes() throws Exception {
+        // ARRANGE
+        when(applicationParams.getGlobalSearchIndexName()).thenReturn(GLOBAL_INDEX);
+        when(applicationParams.getGlobalSearchIndexType()).thenReturn(INDEX_TYPE_DOC);
+
+        String searchRequest = "{\"query\": {\"match_all\": {}}}";
+        JsonNode searchRequestNode = new ObjectMapper().readTree(searchRequest);
+        ElasticsearchRequest elasticSearchRequest = new ElasticsearchRequest(searchRequestNode);
+        when(elasticsearchQueryHelper.validateAndConvertRequest(any())).thenReturn(elasticSearchRequest);
+
+        // When wildcard passed, helper should expand to available case types
+        when(elasticsearchQueryHelper.getCaseTypesAvailableToUser())
+            .thenReturn(List.of(CASE_TYPE_ID, CASE_TYPE_ID_2));
+
+        CaseSearchResult expected = mock(CaseSearchResult.class);
+        when(caseSearchOperation.execute(any(CrossCaseTypeSearchRequest.class), anyBoolean())).thenReturn(expected);
+
+        List<String> wildcard = singletonList(ElasticsearchRequest.WILDCARD);
+
+        // ACT
+        CaseSearchResult actual = endpoint.searchCases(wildcard, searchRequest, true, true);
+
+        // ASSERT
+        verify(elasticsearchQueryHelper).validateAndConvertRequest(searchRequest);
+        verify(caseSearchOperation).execute(argThat(req -> {
+            assertThat(req.getSearchRequestJsonNode(), is(searchRequestNode));
+            // wildcard was expanded
+            assertThat(req.getCaseTypeIds(), is(List.of(CASE_TYPE_ID, CASE_TYPE_ID_2)));
+            // global index is selected
+            assertThat(req.getSearchIndex().isPresent(), is(true));
+            SearchIndex idx = req.getSearchIndex().get();
+            assertThat(idx.getIndexName(), is(GLOBAL_INDEX));
+            assertThat(idx.getIndexType(), is(INDEX_TYPE_DOC));
+            return true;
+        }), eq(true));
+        assertThat(actual, is(expected));
+    }
+
 
 
     @Nested
